# gpsami

./: Cargo.toml  NEWS  README  README.md  meson.build  net.figuiere.gpsami.json
build-aux/: cargo.sh  qt5.json
data/: net.figuiere.gpsami.appdata.xml.in
po/: POTFILES  meson.build
src/: devices.rs  drivers.rs  file_chooser_button.rs  gpsbabel.rs  main.rs  meson.build  mgapplication.rs  mgwindow.ui  utils.rs
