[package]
name = "gpsami"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
license = "GPL-3"
edition = "2018"

[dependencies]
dirs-next = "^2.0.0"
env_logger = "0.8.3"
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
gtk4 = "^0.6.0"
gtk-macros = "^0.3.0"
gudev = { version = "^0.14.0" }
libudev = "0.2.0"
log = "0.4.14"
once_cell = "1.5"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[[bin]]
name = "gpsami"
